1999-04-06  Alex Lancaster  <alex@santafe.edu>

	* refbook.sgml: Update PUBLIC identifier for DTD to "-//OASIS//DTD
	DocBook V3.1//EN" Remove JPEG notation class - now part of the 3.1
	DTD.

1999-02-28  Alex Lancaster  <alex@santafe.edu>

	* sgml.el (run-all): Set uniquify-method-lists to `nil' when
	calling load-and-process-modules.  Ensures all method
	documentation called correctly.

1999-02-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am
	(protocol.elc): Dependency on $(swarm_srcdir)/etc/protocol.el.
	(sgml.elc): Dependency on common.elc and protocol.elc.
	Both rely on implicit rules.
	(EXTRA_DIST): Add sgml.el.

	* sgml.el (sgml-generate-indices): Use get-top-builddir instead of
	get-swarmdocs-build-area.

1999-02-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (refindex.sgml $(PAGES)): Depend on
	$(swarm_srcdir)/etc/{protocol,common}.el instead of
	$(top_srcdir)/{protocol,common}.el.  Load sgml.el instead of
	protocol.el.

1999-02-09  Alex Lancaster  <alex@santafe.edu>

	* refcont.sgml (random-app.sgml): Add `Random' Appendix to list of
	contents.

1999-01-26  Alex Lancaster  <alex@santafe.edu>

	* refmeta.sgml: Move bibliodata entity outside of BOOKBIBLIO - so
	legalnotice links work.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ref00a.sgml: Remove porting note about .swarmArchiver.  Swarm 1.4
	will read old files, but then change the syntax.

1999-01-15  Alex Lancaster  <alex@santafe.edu>

	* ref00a.sgml: Add porting note on Histogram protocol change.

1999-01-13  Alex Lancaster  <alex@santafe.edu>

	* refmeta.sgml: Remove old LEGALNOTICE text.  Refer the
	newly-defined {doc,swarm}-legalnotice entities from global.ent.
	Move CORPAUTHOR inside BOOKBIBLIO.

	* gpl-app.sgml: Refer to the Swarm documentation as being under
	the terms of the GPL.

	* ref00a.sgml (SECT1): Add porting notes for Swarm 1.4.

1999-01-07  Alex Lancaster  <alex@santafe.edu>

	* ref00a.sgml: Make SIMPLELIST an ITEMIZEDLIST.
